--- a/config/ETL.yaml
+++ b/config/ETL.yaml
@@ -7,11 +7,17 @@ dataSrces: &dataSrces [ 'portal inmobiliario', 'toctoc', 'propiedades emol', 'ic
 procDtIni: 20200701
 # Processing End Date format YYYYMMDD
 procDtEnd: 20210101
+# Stats
+statsPath: D:\Reference\housemodel\stats\ETL
 # Extract Setup
 # Transform Setup
-etlTransformLib: D:\Reference\housemodel\main\ETL\T4houses.py
-etlTransformCols: [Srce, Province, PublishedDate, PropertyType, PropertyState, MtTot, Bdroom, Bath, Parking,  PriceUF, Link]
-etlTransformPath: D:\Reference\housemodel\data\T\ETL
+transformPath: D:\Reference\housemodel\data\T\ETL
+## Collect
+collectLib: D:\Reference\housemodel\main\ETL\T\houses\collect.py
+collectionCols: [Srce, Province, PublishedDate, PropertyType, PropertyState, MtTot, Bdroom, Bath, Parking,  PriceUF, Link, Description]
+## Format
+formatLib: D:\Reference\housemodel\main\ETL\T\houses\format.py
+formationCols: [Srce, Province, PublishedDate, PropertyType, PropertyState, MtTot, Bdroom, Bath, Parking,  PriceUF, Link]
 # Execution setup
 info: False
 force: False
