--- a/config/ETL.yaml
+++ b/config/ETL.yaml
@@ -14,7 +14,9 @@ statsPath: D:\Reference\housemodel\stats\ETL
 transformPath: D:\Reference\housemodel\data\T\ETL
 ## Collect
 collectLib: D:\Reference\housemodel\main\ETL\T\houses\collect.py
-collDropKeys: ["pincoya","pudahuel", "batuco", "colina", "bosque", "maipu", "florida", "puente", "bernardo", "quilicura","chicureo", "valles", "cisterna", "maipú", "melipilla", "frei","bolivia", "inversionista", "remodelación", "refaccionar", "invertir"]
+collDropKeys: ["pincoya","pudahuel", "batuco", "colina", "bosque", "maipu", "florida", "puente", 
+"bernardo", "quilicura","chicureo", "valles", "cisterna", "maipú", "melipilla", "frei","bolivia", 
+"inversionista", "remodelación", "refaccionar", "invertir", "lampa", "embalse"]
 collectionCols: [Srce, Province, PublishedDate, PropertyType, PropertyState, MtTot, Bdroom, Bath, Parking,  PriceUF, Link, Description]
 ## Format
 formatLib: D:\Reference\housemodel\main\ETL\T\houses\format.py
@@ -23,7 +25,7 @@ formatCols: [Srce, Province, PublishedDate, PropertyType, PropertyState, MtTot, 
 fillLib: D:\Reference\housemodel\main\ETL\T\houses\fill.py
 ## fEng
 fEngLib: D:\Reference\housemodel\main\ETL\T\houses\fEng.py
-fEngCols: [Srce, Province, PublishedDate, PropertyType, PropertyState, Bdroom, Bath, Parking,  PriceUF, MtTot, UFxMt2, ValueScore, Score, Link]
+fEngCols: [SnapDate, Srce, Province, PublishedDate, PropertyType, PropertyState, Bdroom, Bath, Parking,  PriceUF, MtTot, UFxMt2, ValueScore, Score, Link]
 # Execution setup
 info: False
 force: False
