uff... load on postgresql complete, created a copuple of reports and a view to get rapid insight on ufxm2

--- a/config/ETL.yaml
+++ b/config/ETL.yaml
@@ -25,7 +25,14 @@ formatCols: [Srce, Province, PublishedDate, PropertyType, PropertyState, MtTot, 
 fillLib: D:\Reference\housemodel\main\ETL\T\houses\fill.py
 ## fEng
 fEngLib: D:\Reference\housemodel\main\ETL\T\houses\fEng.py
-fEngCols: [SnapDate, Srce, Province, PublishedDate, PropertyType, PropertyState, Bdroom, Bath, Parking,  PriceUF, MtTot, UFxMt2, ValueScore, Score, Link]
+fEngCols: [SnapDate, Srce, Province, PublishedDate, PropertyType, PropertyState, Bdroom, Bath, Parking,  MtTot, PriceUF, UFxMt2, ValueScore, Score, Link]
+## Load
+loadLib: D:\Reference\housemodel\main\ETL\L\houses\postgreSQL.py
+dbCfg:
+  db: houses
+  user: postgres
+  hst: localhost
+  prt: 5432
 # Execution setup
 info: False
 force: False
