--- a/config/ETL_v2_0_seg2.yaml
+++ b/config/ETL_v2_0_seg2.yaml
@@ -26,10 +26,9 @@ formatLib: D:\Reference\housemodel\main\ETL\T\houses\format.py
 formatCols: [Srce, Region, Province, PublishedDate, PropertyType, PropertyState, Age, Stage, Delivery, CommonExpnsCLP, Floor, ForInvestment, MtTot, MtUtil, Bdroom, Bath, Parking, Storage, Pool, PriceUF, Link]
 ## Fill
 fillLib: D:\Reference\housemodel\main\ETL\T\houses\fill.py
-
 ## fEng
 fEngLib: D:\Reference\housemodel\main\ETL\T\houses\fEng.py
-fEngCols: [SnapDate, Srce, Region, Province, PublishedDate, PropertyType, PropertyState, Age, Stage, Delivery, CommonExpnsCLP, Floor, ForInvestment, Sector, MtTot, MtTotInUtilPerc, MtUtil, Bdroom, Bath, Balcony, Parking, Storage, Pool, PriceUF, UFxMt2, Value, Score, Link]
+fEngCols: [SnapDate, Srce, Region, Province, PublishedDate, PropertyType, PropertyState, Age, Stage, Delivery, CommonExpnsCLP, Floor, ForInvestment, Sector, MtTot, MtUtil, MtTotInUtilPerc, Bdroom, Bath, Balcony, Parking, Storage, Pool, PriceUF, UFxMt2, Value, Score, Link]
 ## Load
 loadLib: D:\Reference\housemodel\main\ETL\L\houses\postgreSQL.py
 dbCfg:
