--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
 numpy==1.19.0
 pandas==1.0.5
+psycopg2==2.8.5
 python-dateutil==2.8.1
 pytz==2020.1
+pywin32==228
 PyYAML==5.3.1
 six==1.15.0
+Unidecode==1.1.1
+XlsxWriter==1.2.9
+xlwt==1.3.0
