refactor folders and modified gitignore to clean dirs

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ stats/ETL/*
 stats/DASH/*
 logs/ETL/*
 logs/DASH/*
-data/ETL/E/webscrapper
-data/ETL/E/python
-data/ETL/T/python
-data/DASH/python
+data/ETL/E/webscrapper/*
+data/ETL/E/python/*
+data/ETL/T/python/*
+data/DASH/python/*
