--- a/config/ETL_v2_1_seg3.yaml
+++ b/config/ETL_v2_1_seg3.yaml
@@ -2,7 +2,7 @@
 # Input Setup
 dataIndex: D:/Reference/housemodel/data/ETL/E/byHand/segment2_datasources.csv
 dataExtract:  D:/Reference/housemodel/data/ETL/E/python
-dataFolder: D:/Reference/housemodel/data/ETL/E/webscrapper
+dataFolder: D:/Reference/housemodel/data/ETL/E/python
 dataSrces: &dataSrces [ 'portal inmobiliario' ]
 # Processing Initial Date format YYYYMMDD
 procDtIni: 20200829
@@ -16,9 +16,12 @@ statsPath: D:/Reference/housemodel/stats/ETL
 seeLib: D:/Reference/housemodel/main/ETL/E/houses/see.py
 ## Differentiate
 differentiateLib: D:/Reference/housemodel/main/ETL/E/houses/differentiate.py
+seeFile: "D:/Reference/housemodel/data/ETL/E/python/see.csv"
 seenFile: "D:/Reference/housemodel/data/ETL/E/python/seen.csv"
 newFile: "D:/Reference/housemodel/data/ETL/E/python/new.csv"
 goneFile: "D:/Reference/housemodel/data/ETL/E/python/gone.csv"
+dayDeleteFile: "D:/Reference/housemodel/data/ETL/E/python/dayDelete.csv"
+dayArchiveFile: "D:/Reference/housemodel/data/ETL/E/python/dayArchive.csv"
 
 # Transform Setup
 transformPath: D:/Reference/housemodel/data/ETL/T/python
